--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 
 <body>
     <div class="Wrap">
+        <section class="scroll">
+            <div class="box">
+                <div class="txtbox"></div>
+            </div>
+        </section>
         <!-- { 2022.07.11 header Chae -->
         <header id="header">
-            <div class="topBanner">
+            <div class="container">
                 <h1>
                     <a href="/">
                         <img src="./img/logo_b.png" alt="">
@@ -31,13 +36,57 @@
                         <li><a href="">OTHER</a></li>
                     </ul>
                 </nav>
-                <i></i>
-                <i></i>
-                <i></i>
+                <div class="btn">
+                    <a href=""><i class="xi-cart-o"></i></a>
+                    <a href=""><i class="xi-user-o"></i></a>
+                </div>
+
             </div>
         </header>
+        <!-- 2022.07.12 header Chae } -->
+        <!-- { 2022.07.12 main Chae -->
         <main id="main">
-            <section class="mainVisual">
+            <section class="mainVisual sticky">
+                <div class="mainSlide">
+                    <figure>
+                        <img src="./img/main_visual02.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./img/main_visual03.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./img/main_visual04.jpg" alt="">
+                    </figure>
+                </div>
+                <div class="slogan">
+                    <h2>
+                        expect better you
+                    </h2>
+                </div>
+            </section>
+            <section class="mainEye sticky">
+
+                <h2>에스쁘아가 제안하는 새로운 메이크업을 만나보세요</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi error consectetur dolorem quos
+                    adipisci, <br />
+                    fugit itaque enim vero eligendi?Laboriosam!</p>
+                <div class="container">
+                    <figure>
+                        <img src="./img/medel09.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./img/model01.jpg" alt="">
+                    </figure>
+                </div>
+            </section>
+            <section class="mainLip sticky">
+                <div class="container">
+                    <figure>
+
+                    </figure>
+                </div>
+            </section>
+            <section class="mainFace">
 
             </section>
         </main>
@@ -49,7 +98,6 @@
     <script src="./js/jquery.scrollme.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/test03.js"></script>
-
 </body>
 
 </html>
