--- a/index.html
+++ b/index.html
@@ -65,29 +65,82 @@
                 </div>
             </section>
             <section class="mainEye sticky">
-
                 <h2>에스쁘아가 제안하는 새로운 메이크업을 만나보세요</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi error consectetur dolorem quos
                     adipisci, <br />
                     fugit itaque enim vero eligendi?Laboriosam!</p>
                 <div class="container">
                     <figure>
-                        <img src="./img/medel09.jpg" alt="">
+                        <img src="./img/eye12.jpg" alt="">
                     </figure>
                     <figure>
-                        <img src="./img/model01.jpg" alt="">
+                        <img src="./img/eye13.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./img/eye11.jpg" alt="">
                     </figure>
                 </div>
             </section>
-            <section class="mainLip sticky">
+            <section class="lipSticky sticky">
                 <div class="container">
-                    <figure>
-
-                    </figure>
+                    <figure></figure>
                 </div>
             </section>
-            <section class="mainFace">
+            <section class="mainLip">
 
+                <div class="container">
+                    <div class="inner">
+
+                        <div class="left">
+                            <h2>Lip</h2>
+                            <figure class="box item01 ">
+                                <img src="./img/lip01.png" alt="">
+                                <div class="txt">
+                                    <h3>워시드 핑크 캡슐 컬렉션</h3>
+                                    <p>물 빠진 듯 페일한 감성의 뉴트럴 핑크 컬렉션</p>
+                                </div>
+                            </figure>
+                            <figure class="box item02">
+                                <div class="txt">
+                                    <h3>노웨어 캡슐 컬렉션 더티네온</h3>
+                                    <p>에스쁘아가 새롭게 해석하는 스트릿 헤리티지 감성의 <br />NEW 네온 컬렉션</p>
+                                </div>
+                                <img src="./img/lip05.png" alt="">
+                            </figure>
+                            <figure class="box item03">
+                                <img src="./img/lip03.png" alt="">
+                                <div class="txt">
+                                    <h3>립스틱 노웨어 샤인 미니</h3>
+                                    <p>안 바른듯 가볍고 부드럽게 밀착되어 촉촉하게 빛나는 <br />글로우립을 연출해주는 울트라 샤인 립스틱</p>
+                                </div>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="mainFace sticky">
+
+                <div class="container">
+                    <h2>Face</h2>
+                    <div class="faceSlide">
+                        <figure>
+                            <img src="./img/makeup01.png" alt="">
+                        </figure>
+                        <figure>
+                            <img src="./img/makeup02.png" alt="">
+                        </figure>
+                        <figure>
+                            <img src="./img/makeup03.png" alt="">
+                        </figure>
+                        <figure>
+                            <img src="./img/makeup04.png" alt="">
+                        </figure>
+                        <figure>
+                            <img src="./img/makeup05.png" alt="">
+                        </figure>
+                    </div>
+
+                </div>
             </section>
         </main>
         <footer id="footer">
