--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>test03</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/slick.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Nanum+Myeongjo&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/test03.css">
 </head>
 
@@ -87,7 +90,6 @@
                 </div>
             </section>
             <section class="mainLip">
-
                 <div class="container">
                     <div class="inner">
 
@@ -98,12 +100,14 @@
                                 <div class="txt">
                                     <h3>워시드 핑크 캡슐 컬렉션</h3>
                                     <p>물 빠진 듯 페일한 감성의 뉴트럴 핑크 컬렉션</p>
+                                    <a href="">구매하기</a>
                                 </div>
                             </figure>
                             <figure class="box item02">
                                 <div class="txt">
                                     <h3>노웨어 캡슐 컬렉션 더티네온</h3>
                                     <p>에스쁘아가 새롭게 해석하는 스트릿 헤리티지 감성의 <br />NEW 네온 컬렉션</p>
+                                    <a href="">구매하기</a>
                                 </div>
                                 <img src="./img/lip05.png" alt="">
                             </figure>
@@ -112,6 +116,7 @@
                                 <div class="txt">
                                     <h3>립스틱 노웨어 샤인 미니</h3>
                                     <p>안 바른듯 가볍고 부드럽게 밀착되어 촉촉하게 빛나는 <br />글로우립을 연출해주는 울트라 샤인 립스틱</p>
+                                    <a href="">구매하기</a>
                                 </div>
                             </figure>
                         </div>
@@ -119,28 +124,187 @@
                 </div>
             </section>
             <section class="mainFace sticky">
-
+                <h2>Face</h2>
                 <div class="container">
-                    <h2>Face</h2>
-                    <div class="faceSlide">
-                        <figure>
-                            <img src="./img/makeup01.png" alt="">
-                        </figure>
-                        <figure>
-                            <img src="./img/makeup02.png" alt="">
-                        </figure>
-                        <figure>
-                            <img src="./img/makeup03.png" alt="">
-                        </figure>
-                        <figure>
-                            <img src="./img/makeup04.png" alt="">
-                        </figure>
-                        <figure>
-                            <img src="./img/makeup05.png" alt="">
-                        </figure>
+                    <div class="left">
+                        <div class="txtSlide">
+                            <figure>
+                                <h3>프로 테일러 비 실크 쿠션</h3>
+                                <p>실크처럼 얇고 매끈한 텍스처가<br />
+                                    피부에 촘촘히 레이어링되어<br />
+                                    결점 없는 실크결 피부를 표현해주는 결광 쿠션</p>
+                                <div class="pay">
+                                    <ul>
+                                        <li>
+                                            <del>￦ 25,000</del>
+                                        </li>
+                                        <li>
+                                            (35%)
+                                        </li>
+                                        <li>￦ 16,250</li>
+                                    </ul>
+                                </div>
+                                <div class="buy">
+                                    <a href="">장바구니</a>
+                                    <a href="">구매하기</a>
+                                </div>
+                            </figure>
+                            <figure>
+                                <h3>프레쉬 세팅 파우더 9g</h3>
+                                <p>울퉁불퉁한 피부의 요철과 모공을 매끈하게 가려주어<br />
+                                    부드러운 피부결을 연출해주는 피니쉬 파우더</p>
+                                <div class="pay">
+                                    <ul>
+                                        <li>
+                                            <del>￦ 25,000</del>
+                                        </li>
+                                        <li>
+                                            (20%)
+                                        </li>
+                                        <li>￦ 20,000</li>
+                                    </ul>
+                                </div>
+                                <div class="buy">
+                                    <a href="">장바구니</a>
+                                    <a href="">구매하기</a>
+                                </div>
+                            </figure>
+                            <figure>
+                                <h3>프로 테일러 비 파우더 쿠션</h3>
+                                <p>얇고 가볍게 발리는 에어리 파우더 텍스처가<br />
+                                    피부에 부드럽게 밀착되는 보송쿠션</p>
+                                <div class="pay">
+                                    <ul>
+                                        <li>
+                                            <del>￦ 35,000</del>
+                                        </li>
+                                        <li>
+                                            (25%)
+                                        </li>
+                                        <li>￦ 26,250</li>
+                                    </ul>
+                                </div>
+                                <div class="buy">
+                                    <a href="">장바구니</a>
+                                    <a href="">구매하기</a>
+                                </div>
+                            </figure>
+                            <figure>
+                                <h3>풀데이 세팅 픽서</h3>
+                                <p>종일 보송하게 깨끗하게, 유분 잠금 미스트</p>
+                                <div class="pay">
+                                    <ul>
+                                        <li>
+                                            <del>￦ 20,000</del>
+                                        </li>
+                                        <li>
+                                            (20%)
+                                        </li>
+                                        <li>￦ 16,000</li>
+                                    </ul>
+                                </div>
+                                <div class="buy">
+                                    <a href="">장바구니</a>
+                                    <a href="">구매하기</a>
+                                </div>
+                            </figure>
+                            <figure>
+                                <h3>리얼 치크 업</h3>
+                                <p>리얼 소프트 레이어링 텍스처로 매일 쉽게<br />
+                                    치크 메이크업을 완성하는 파우더 블러셔</p>
+                                <div class="pay">
+                                    <ul>
+                                        <li>
+                                            <del>￦ 19,000</del>
+                                        </li>
+                                        <li>
+                                            (20%)
+                                        </li>
+                                        <li>￦ 15,200</li>
+                                    </ul>
+                                </div>
+                                <div class="buy">
+                                    <a href="">장바구니</a>
+                                    <a href="">구매하기</a>
+                                </div>
+                            </figure>
+                            <figure>
+                                <h3>퓨어 래디언스 글로우라이저</h3>
+                                <p>보습 성분을 60% 이상 함유하여<br />
+                                    수분감을 즉각적으로 선사해주는<br />
+                                    산뜻한 젤 타입 에센스</p>
+                                <div class="pay">
+                                    <ul>
+                                        <li>
+                                            <del>￦ 30,000</del>
+                                        </li>
+                                        <li>
+                                            (20%)
+                                        </li>
+                                        <li>￦ 24,000</li>
+                                    </ul>
+                                </div>
+                                <div class="buy">
+                                    <a href="">장바구니</a>
+                                    <a href="">구매하기</a>
+                                </div>
+                            </figure>
+                            <figure>
+                                <h3>테이핑 컨실러 롱웨어</h3>
+                                <p>피부 결점을 감쪽같이 커버하지만<br />
+                                    답답함 없이 편안하게 밀착되는<br />
+                                    리퀴드 타입 테이핑 컨실러</p>
+                                <div class="pay">
+                                    <ul>
+                                        <li>
+                                            <del>￦ 25,000</del>
+                                        </li>
+                                        <li>
+                                            (20%)
+                                        </li>
+                                        <li>￦ 20,000</li>
+                                    </ul>
+                                </div>
+                                <div class="buy">
+                                    <a href="">장바구니</a>
+                                    <a href="">구매하기</a>
+                                </div>
+                            </figure>
+                        </div>
+                        <div class="arrow">
+                            <i class="xi-angle-left-thin"></i>
+                            <i class="xi-angle-right-thin"></i>
+                        </div>
                     </div>
-
+                    <div class="right">
+                        <div class="faceSlide">
+                            <figure>
+                                <img src="./img/makeup01.png" alt="">
+                            </figure>
+                            <figure>
+                                <img src="./img/makeup02.png" alt="">
+                            </figure>
+                            <figure>
+                                <img src="./img/makeup03.png" alt="">
+                            </figure>
+                            <figure>
+                                <img src="./img/makeup04.png" alt="">
+                            </figure>
+                            <figure>
+                                <img src="./img/makeup05.png" alt="">
+                            </figure>
+                            <figure>
+                                <img src="./img/makeup06.png" alt="">
+                            </figure>
+                            <figure>
+                                <img src="./img/makeup07.png" alt="">
+                            </figure>
+                        </div>
+                    </div>
                 </div>
+            </section>
+            <section class="mainOther">
+
             </section>
         </main>
         <footer id="footer">
