--- a/index.html
+++ b/index.html
@@ -304,7 +304,12 @@
                 </div>
             </section>
             <section class="mainOther">
-
+                <div class="container">
+                    <h2>Other</h2>
+                    <figure>
+                        <img src="./img/eye02.png" alt="">
+                    </figure>
+                </div>
             </section>
         </main>
         <footer id="footer">
