--- a/index.html
+++ b/index.html
@@ -100,13 +100,36 @@
                                 <div class="txt">
                                     <h3>워시드 핑크 캡슐 컬렉션</h3>
                                     <p>물 빠진 듯 페일한 감성의 뉴트럴 핑크 컬렉션</p>
+                                    <div class="pay">
+                                        <ul>
+                                            <li>
+                                                <del>￦ 22,000</del>
+                                            </li>
+                                            <li>
+                                                (24%)
+                                            </li>
+                                            <li>￦ 16,720</li>
+                                        </ul>
+                                    </div>
                                     <a href="">구매하기</a>
+
                                 </div>
                             </figure>
                             <figure class="box item02">
                                 <div class="txt">
                                     <h3>노웨어 캡슐 컬렉션 더티네온</h3>
                                     <p>에스쁘아가 새롭게 해석하는 스트릿 헤리티지 감성의 <br />NEW 네온 컬렉션</p>
+                                    <div class="pay">
+                                        <ul>
+                                            <li>
+                                                <del>￦ 24,000</del>
+                                            </li>
+                                            <li>
+                                                (15%)
+                                            </li>
+                                            <li>￦ 20,880</li>
+                                        </ul>
+                                    </div>
                                     <a href="">구매하기</a>
                                 </div>
                                 <img src="./img/lip05.png" alt="">
@@ -116,6 +139,17 @@
                                 <div class="txt">
                                     <h3>립스틱 노웨어 샤인 미니</h3>
                                     <p>안 바른듯 가볍고 부드럽게 밀착되어 촉촉하게 빛나는 <br />글로우립을 연출해주는 울트라 샤인 립스틱</p>
+                                    <div class="pay">
+                                        <ul>
+                                            <li>
+                                                <del>￦ 17,000</del>
+                                            </li>
+                                            <li>
+                                                (40%)
+                                            </li>
+                                            <li>￦ 10,200</li>
+                                        </ul>
+                                    </div>
                                     <a href="">구매하기</a>
                                 </div>
                             </figure>
@@ -304,17 +338,154 @@
                 </div>
             </section>
             <section class="mainOther">
+                <h2>Other</h2>
                 <div class="container">
-                    <h2>Other</h2>
-                    <figure>
-                        <img src="./img/eye02.png" alt="">
-                    </figure>
+                    <div class="content">
+                        <figure>
+                            <img src="./img/other01.png" alt="">
+                        </figure>
+                        <div class="txt">
+                            <h3>스키니 픽스 블렌더</h3>
+                            <div class="pay">
+                                <ul>
+                                    <li>
+                                        <del>￦ 22,000</del>
+                                    </li>
+                                    <li>
+                                        (24%)
+                                    </li>
+                                    <li>￦ 16,720</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <figure>
+                            <img src="./img/other02.png" alt="">
+                        </figure>
+                        <div class="txt">
+                            <h3>수퍼 데피니션 페이스 브러쉬</h3>
+                            <div class="pay">
+                                <ul>
+                                    <li>
+                                        <del>￦ 22,000</del>
+                                    </li>
+                                    <li>
+                                        (24%)
+                                    </li>
+                                    <li>￦ 16,720</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <figure>
+                            <img src="./img/other03.png" alt="">
+                        </figure>
+                        <div class="txt">
+                            <h3>히팅 아이래쉬 컬러 듀얼 콤</h3>
+                            <div class="pay">
+                                <ul>
+                                    <li>
+                                        <del>￦ 22,000</del>
+                                    </li>
+                                    <li>
+                                        (24%)
+                                    </li>
+                                    <li>￦ 16,720</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <figure>
+                            <img src="./img/other04.png" alt="">
+                        </figure>
+                        <div class="txt">
+                            <h3>메가 픽스 블렌더</h3>
+                            <div class="pay">
+                                <ul>
+                                    <li>
+                                        <del>￦ 22,000</del>
+                                    </li>
+                                    <li>
+                                        (24%)
+                                    </li>
+                                    <li>￦ 16,720</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <figure>
+                            <img src="./img/other05.png" alt="">
+                        </figure>
+                        <div class="txt">
+                            <h3>미니 브러쉬 키트</h3>
+                            <div class="pay">
+                                <ul>
+                                    <li>
+                                        <del>￦ 22,000</del>
+                                    </li>
+                                    <li>
+                                        (24%)
+                                    </li>
+                                    <li>￦ 16,720</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+            <section class="mainFin">
+                <figure>
+                </figure>
+                <div class="container">
+                    <h2>에스쁘아는 독보적이고 생동감 있는 <br />
+                        메이크업으로 기대하게 만드는 프리미엄 <br />
+                        메이크업 전문 브랜드입니다.</h2>
                 </div>
             </section>
         </main>
+        <!-- 2022.07.15 main Chae } -->
+        <!-- { 2022.07.15 footer Chae -->
         <footer id="footer">
+            <div class="top">
+                <div class="container">
 
+                    <h2>
+                        <a href="">
+                            <img src="./img/logo_w.png" alt="">
+                        </a>
+                    </h2>
+                    <dl>
+                        <dd>서비스 이용약관</dd>
+                        <dd>개인정보처리방침</dd>
+                        <dd>영상기기 관리방침</dd>
+                        <dd>사업자 정보 확인</dd>
+                        <dd>이메일 무단수집 거부</dd>
+                        <dd>전자공고</dd>
+                    </dl>
+                    <div class="icon">
+                        <a href=""><i class="xi-facebook"></i></a>
+                        <a href=""><i class="xi-instagram"></i></a>
+                        <a href=""><i class="xi-youtube"></i></a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="bottom">
+                <ul>
+                    <li>(주)에스쁘아 대표이사: 최민정</li>
+                    <li> 본사 : 서울특별시 용산구 한강대로 100 (한강로2가) 6층</li>
+                    <li>사업자번호: 104-86-58598</li>
+                    <li>고객상담: 080-619-8888</li>
+                    <li> 이메일: espoirmall@espoir.com</li>
+                </ul>
+            </div>
         </footer>
+        <!-- 2022.07.15 footer Chae } -->
     </div>
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery.scrollme.min.js"></script>
