--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <h2>
                         expect better you
                     </h2>
+                    <p>make your day extraodinary my color but better</p>
                 </div>
             </section>
             <section class="mainEye sticky">
