--- a/index.html
+++ b/index.html
@@ -329,7 +329,9 @@
                                 <img src="./img/other01.png" alt="" />
                             </figure>
                             <div class="txt">
-                                <h3>스키니 픽스 블렌더</h3>
+                                <h3>
+                                    스키니 픽스 블렌더
+                                </h3>
                                 <div class="pay">
                                     <ul>
                                         <li>
